--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 
 loco-rs = { version = "0.3.1" }
 migration = { path = "migration" }
-
+rand = "0.8.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 eyre = "0.6"
@@ -21,8 +21,7 @@ tracing = "0.1.40"
 chrono = "0.4"
 validator = { version = "0.16" }
 sea-orm = { version = "1.0.0-rc.1", features = [
-  "sqlx-sqlite",
-  "sqlx-postgres",
+  "sqlx-mysql",
   "runtime-tokio-rustls",
   "macros",
 ] }
