--- a/config/test.yaml
+++ b/config/test.yaml
@@ -82,7 +82,7 @@ mailer:
 # Database Configuration
 database:
   # Database connection URI
-  uri: {{get_env(name="DATABASE_URL", default="postgres://loco:loco@localhost:5432/muse_integrator_test")}} 
+  uri: {{get_env(name="DATABASE_URL", default="mysql://root:123456@localhost:3306/muse_integrator")}} 
   # When enabled, the sql query will be logged.
   enable_logging: false
   # Set the timeout duration when acquiring a connection.
