--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 
 [package]
-name = "muse_integrator"
+name = "credits"
 version = "0.1.0"
 edition = "2021"
 
@@ -37,7 +37,7 @@ version = "2.8.0"
 features = ["tokio-runtime"]
 
 [[bin]]
-name = "muse_integrator-cli"
+name = "credits-cli"
 path = "src/bin/main.rs"
 required-features = []
 
