--- a/Dockerfile.gitlab
+++ b/Dockerfile.gitlab
@@ -2,8 +2,8 @@ FROM rust:1.74-slim as github-credits
 
 
 ENV task_params=" " start_params=" "
-COPY --from=github-credits /usr/src/config /usr/app/config
-COPY --from=github-credits /usr/src/target/release/credits-cli /usr/app/credits-cli
+COPY --from=github-credits /usr/app/config /usr/app/config
+COPY --from=github-credits /usr/app/credits-cli /usr/app/credits-cli
 EXPOSE 8080
 CMD ["sh", "-c", "cd /usr/app && ./credits-cli task ${task_params} && ${start_params} ./credits-cli start"]
 
