--- a/config/development.yaml
+++ b/config/development.yaml
@@ -83,7 +83,7 @@ database:
 # Redis Configuration
 redis:
   # Redis connection URI
-  uri: {{ get_env(name="REDIS_URL", default="redis://:SSVFDKBJNDFNJ%40rfgvf3244@r-2zeid7zt2t0zc87xhx.redis.rds.aliyuncs.com:6379") }}
+  uri: {{ get_env(name="REDIS_URL", default="redis://127.0.0.1") }}
   # Dangerously flush all data in Redis on startup. dangerous operation, make sure that you using this flag only on dev environments or test mode
   dangerously_flush: false
 
