--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ sea-orm = { version = "1.0.0-rc.1", features = [
 ] }
 redis = "0.22.3"
 
+reqwest = { version = "0.11.25", features = ["json"] }
+
 axum = "0.7.1"
 include_dir = "0.7"
 uuid = { version = "1.6.0", features = ["v4"] }
