--- a/Dockerfile.gitlab
+++ b/Dockerfile.gitlab
@@ -8,7 +8,7 @@ RUN cargo build --release
 
 FROM debian:bookworm-slim
 
-RUN apt-get update && apt-get install -y libc6
+RUN apt-get update && apt-get install -y libc6 && install libssl-dev
 
 WORKDIR /usr/app
 
