--- a/Dockerfile.gitlab
+++ b/Dockerfile.gitlab
@@ -8,10 +8,9 @@ RUN cargo build --release
 
 FROM debian:bookworm-slim
 
-RUN apt-get update && apt-get install -y libc6 && install libssl-dev
+RUN apt-get update && apt-get install -y libc6 && apt-get install -y libssl-dev
 
 WORKDIR /usr/app
 
 COPY --from=builder /usr/src/config /usr/app/config
 COPY --from=builder /usr/src/target/release/credits-cli /usr/app/credits-cli
-
