--- a/Dockerfile.gitlab
+++ b/Dockerfile.gitlab
@@ -8,7 +8,7 @@ RUN cargo build --release
 
 FROM debian:bookworm-slim
 
-RUN apt-get update && apt-get install -y libc6 && apt-get install -y libssl-dev
+RUN apt-get update && apt-get install -y libc6 && apt-get install -y libssl-dev && apt-get -y install pkg-config
 
 WORKDIR /usr/app
 
