--- a/Dockerfile.gitlab
+++ b/Dockerfile.gitlab
@@ -4,7 +4,7 @@ WORKDIR /usr/src/
 
 COPY . .
 
-RUN apt-get install -y libssl-dev && apt-get -y install pkg-config
+RUN apt-get update && apt-get install -y libssl-dev pkg-config
 
 RUN cargo build --release
 
