--- a/dockerfileconfig/config
+++ b/dockerfileconfig/config
@@ -1,5 +1,5 @@
 [source.crates-io]
-replace-with = 'ustc'
+replace-with = 'mirror'
 
-[source.ustc]
-registry = "git://mirrors.ustc.edu.cn/crates.io-index"
+[source.mirror]
+registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
