rust 切换数据源

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,7 +4,8 @@ playground = "run --example playground"
 
 
 [source.crates-io]
-replace-with = 'mirror'
+replace-with = 'rsproxy'
 
-[source.mirror]
-registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
+# 字节跳动
+[source.rsproxy]
+registry = "https://rsproxy.cn/crates.io-index"
