--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,7 @@
 [workspace]
+members = [".", "migration"]
+
+resolver = "2"
 
 [package]
 name = "credits"
@@ -21,9 +24,9 @@ tracing = "0.1.40"
 chrono = "0.4"
 validator = { version = "0.16" }
 sea-orm = { version = "1.0.0-rc.3", features = [
-  "sqlx-mysql",
-  "runtime-tokio-rustls",
-  "macros",
+    "sqlx-mysql",
+    "runtime-tokio-rustls",
+    "macros",
 ] }
 redis = "0.22.3"
 
